--- a/translations_research/requirements.txt
+++ b/translations_research/requirements.txt
@@ -27,6 +27,7 @@ python-dateutil==2.8.2
 pywin32==305
 pyzmq==25.0.0
 regex==2022.10.31
+rouge-metric==1.0.1
 six==1.16.0
 stack-data==0.6.2
 tornado==6.2
